<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Alarming</string>

    <!-- .MainActivity -->
    <string name="textView_drawer_settings">Settings</string>
    <string name="textView_drawer_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="nav_drawer_titles">
        <item>Alarm</item>
        <item>Audio</item>
    </string-array>

    <!-- fragments/SetAlarmFragment -->
    <string name="textView_alarmTime">--:--</string>
    <string name="switch_alarm_on">ON</string>
    <string name="switch_alarm_off">OFF</string>
    <string name="toast_alarmTimeNotSet">Could not set Alarm! No time set.</string>

    <!-- fragments/SoundManagerFragment -->
    <string name="action_save_config">Save configuration</string>
    <string name="action_add_new_sound">Add new sound</string>
    <string name="alertTitle_wrongFileType">Wrong or corrupted file!</string>
    <string name="alert_wrongFileType">It appears that you opened an unsupported or corrupted file. Please select an audio file.</string>

    <string-array name="sound_action_options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <!-- .AlarmReceiverAcitivity -->
    <string name="button_snooze">Snooze</string>

    <!-- .AboutActivity -->
    <string-array name="about_actions">
        <item>About this app</item>
        <item>Licenses</item>
    </string-array>

    <!-- .SettingsActivity -->
    <string name="textView_volume">Volume</string>
    <string name="zero_Percent">0%</string>

    <!-- fragments/SettingsFragment -->
    <string name="preference_category_general">General</string>
    <string name="preference_show_notification_title">Show Notification</string>
    <string name="preference_show_notification_summary">Show a notification when an alarm is scheduled</string>
    <string name="preference_category_media_playback">Media Playback</string>
    <string name="preference_alarm_sound_volume_title">Alarm sound volume</string>
    <string name="preference_alarm_sound_volume_summary">Set the volume level for alarms</string>

    <!-- .AlarmSoundEditActivity -->
    <string name="textView_soundTitle">Title</string>
    <string name="textView_soundArtist">Artist</string>
    <string name="textView_soundStart">Start</string>
    <string name="textView_soundEnd">End</string>
    <string name="textView_soundLength">Absolute length</string>
    <string name="toast_config_saved">Configuration saved</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>

    <!-- Notifications -->
    <string name="notification_alarmActivated">Alarming activated</string>
    <string name="notification_timeSetTo">Time set to</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="about_this_app">
Alarming will help you get out of bed with a smile :)
Wake up to your favorite music and choose exactly what part of a song will play.
Set up all your songs and Alarming will pick one. Never be annoyed by your alarm sound again!
    </string>

    <string name="licenses">
google-gson (https://code.google.com/p/google-gson/)
-------------------------------------------------
Copyright © 2008-2009 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.



android-betterpickers (https://github.com/derekbrameyer/android-betterpickers)
-------------------------------------------------
Copyright 2013 Derek Brameyer

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.



support-v4 (https://developer.android.com/tools/support-library/index.html)
-------------------------------------------------
Copyright 2013 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.



commons-io (http://commons.apache.org/proper/commons-io/)
-------------------------------------------------
Copyright 1999-2014 The Apache Software Foundation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

range-bar (https://github.com/edmodo/range-bar)
-------------------------------------------------
Copyright 2013, Edmodo, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

SmoothProgressBar (https://github.com/castorflex/SmoothProgressBar)
-------------------------------------------------
Copyright 2014 Antoine Merle

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

cardslib (https://github.com/gabrielemariotti/cardslib)
-------------------------------------------------
Copyright 2013-2014 Gabriele Mariotti

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>

</resources>
