<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_general"
        android:key="general_settings_category">

        <CheckBoxPreference
            android:key="show_alarm_notification"
            android:title="@string/preference_show_notification_title"
            android:summary="@string/preference_show_notification_summary"
            android:defaultValue="true"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_media_playback"
        android:key="media_playback_category">

        <EditTextPreference
            android:key="alarm_sound_volume"
            android:title="@string/preference_alarm_sound_volume_title"
            android:summary="@string/preference_alarm_sound_volume_summary"
            android:defaultValue="0.8f"
            />

    </PreferenceCategory>

</PreferenceScreen>