<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_alarmTime"
        android:text="@string/textView_alarmTime"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="60sp"
        />


    <Switch
        android:id="@+id/switch_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textOn="@string/switch_alarm_on"
        android:textOff="@string/switch_alarm_off"
        android:layout_toRightOf="@id/textView_alarmTime"
        android:layout_alignBaseline="@id/textView_alarmTime"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

</RelativeLayout>