<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_alarmTime"
        android:text="@string/textView_alarmTime"
        android:clickable="true"
        android:focusable="true"
        android:layout_centerHorizontal="true"
        android:textSize="80sp"
        />


    <Switch
        android:id="@+id/switch_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textOn="@string/switch_alarm_on"
        android:textOff="@string/switch_alarm_off"
        android:layout_below="@id/textView_alarmTime"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
