<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textView_soundTitle"
        android:id="@+id/textView_soundTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_soundArtist"
        android:id="@+id/textView_soundArtist"
        android:layout_below="@+id/textView_soundTitle"
        android:layout_alignLeft="@+id/textView_soundTitle"
        android:layout_alignStart="@+id/textView_soundTitle"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/veryLightGray"
        android:layout_below="@+id/textView_soundArtist"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/view" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView_soundLength"
        android:id="@+id/textView_soundLength"
        android:layout_alignBottom="@+id/textView_soundArtist"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>